<resources>
    <string name="app_name">Login</string>
    <string name="str_ERROR_DIALOG">Có lỗi xảy ra!\nVui lòng thử lại sau!</string>

    <string name="PROCESSING_REQUEST">Đang xử lý yêu cầu</string>
    <string name="str_vn">Tiếng Việt</string>
    <string name="USERNAME_REQUIRED">Bạn chưa nhập Username</string>
    <string name="USERNAME_INVALID_LENGTH">Username chỉ được nhập không quá 100 ký tự</string>
    <string name="PASSWORD_REQUIRED">Bạn chưa nhập Mật khẩu</string>
    <string name="PASSWORD_INVALID_LENGTH">Password ít nhất phải dài 8 ký tự</string>
    <string name="NETWORK_TITLE_ERROR">LỖI MẠNG</string>
    <string name="str_dialog_thongbao"> Thông báo </string>
    <string name="DETAIL_DOCUMENT_LABEL">Chi tiết văn bản</string>
    <string name="NO_INTERNET_ERROR">Không có kết nối Mạng\nVui lòng kết nối và thử lại</string>


    <string name="str_language">Chọn ngôn ngữ</string>

    <string name="str_ERROR_TICK_DOCUMENT_DIALOG">Lỗi đánh dấu văn bản!</string>
    <string name="NOT_MARKED_SUCCESS">Văn bản đã được bỏ đánh dấu</string>
    <string name="tv_danhdau">Đánh dấu</string>
    <string name="MARKED_SUCCESS">Đánh dấu văn bản thành công</string>
    <string name="str_en">Tiếng Anh</string>
    <string name="str_ls">Tiếng Lào</string>
    <string name="CLOSE_BUTTON">Đóng lại</string>
    <string name="LOGIN_TITLE_ERROR">LỖI ĐĂNG NHẬP</string>
    <string name="LOGIN_INVALID">Thông tin đăng nhập không chính xác</string>
    <string name="IS_READ">Đã xem</string>
    <string name="IS_NOT_READ">Chưa xem</string>
    <string name="str_thuong">Thường</string>

    <string name="tv_trichyeu">Trích yếu: </string>
    <string name="tv_cqbh">CQBH: </string>
    <string name="tv_sokyhieu">Số ký hiệu: </string>
    <string name="tv_ngayden">Ngày đến: </string>
    <string name="tv_ngay_vb">Ngày VB: </string>
    <string name="tv_hinhthucvb">Hình thức VB: </string>
    <string name="tv_sovanban">Số văn bản: </string>
    <string name="tv_soden">Số đến: </string>
    <string name="tv_do_khan">Độ khẩn: </string>
    <string name="tv_hanxuly">Hạn xử lý: </string>
    <string name="tv_sotrang">Số trang: </string>
    <string name="tv_hinhthucgui">Hình thức gửi: </string>
    <string name="tv_vanbanliequan">Văn bản liên quan</string>
    <string name="tv_tonghopykienxuly">Tổng hợp ý kiến xử lý</string>
    <string name="tv_file_dinh_kem">Tệp tin đính kèm: </string>
    <string name="tv_chuyen">Chuyển</string>
    <string name="tv_chuyen_xuly">Chuyển xử lý</string>
    <string name="tv_gui_ykien">Gửi ý kiến</string>
    <string name="tv_bo_danhdau">Bỏ Đánh dấu</string>
    <string name="tv_lichsu">Lịch sử</string>
    <string name="tv_luu_hoso">Lưu hồ sơ</string>
    <string name="tv_ketthuc">Kết thúc</string>
    <string name="tv_vb_lienquan">Related documents</string>
    <string name="tv_tonghop_y_kien">Tổng hợp ý kiến</string>
    <string name="TITLE_NOTIFICATION">THÔNG BÁO</string>
<!--    <string name="str_ERROR_DIALOG">Có lỗi xảy ra!\nVui lòng thử lại sau!</string>-->

    <string name="str_huy_danhgiau">Hủy đánh dấu</string>
    <string name="str_danhgiau">Đánh dấu</string>

    <string name="SELECT_PERSON">Chọn người nhận văn bản</string>



    <string name="tv_xuly">Xử lý</string>
    <string name="tv_xuly_chinh">Xử lý chính</string>
    <string name="tv_XLC">XLC</string>
    <string name="tv_dong_xuly">Đồng xử lý</string>
    <string name="tv_PH">PH</string>
    <string name="tv_phoihop">Phối hợp</string>
    <string name="tv_Xem">Xem</string>
    <string name="tv_ho_ten_dv">Họ tên/Đơn vị</string>
    <string name="tv_DonVi">Đơn vị</string>
    <string name="tv_donggui">Đồng gửi</string>
    <string name="tv_khong_dulieu">Không có dữ liệu</string>
    <string name="btn_luu_va_ketthuc">Lưu và kết thúc</string>
    <string name="tv_cho_ykien">Cho ý kiến</string>
    <string name="str_button_quaylai"> Quay lại</string>
    <string name="tv_luu">Lưu</string>
<!--    <string name="str_ERROR_DIALOG">Có lỗi xảy ra!\nVui lòng thử lại sau!</string>-->
    <string name="tv_gui">Gửi</string>
    <string name="tv_tructiep">Đơn vị/Cá nhân nhận trực tiếp</string>
    <string name="tv_nguoi_nhan_thongbao">Người nhận thông báo</string>
    <string name="tv_ho_ten">Họ tên</string>
    <string name="FINISH_SUCCESS">Kết thúc Văn bản thành công</string>
    <string name="str_ERROR_END_DOCUMENT_DIALOG">Lỗi kết thúc văn bản!</string>
    <string name="str_ERROR_CHECK_DOCUMENT_DIALOG">Lỗi kiểm tra thông tin văn bản!</string>
    <string name="tv_chon_hoso">Chọn hồ sơ</string>
    <string name="NOT_PERSON_SAVE">Chưa chọn đơn vị/cá nhân lưu hồ sơ!</string>


    <string name="tv_xem_db">Xem để biết</string>
    <string name="tv_xin_y_kien">Xin ý kiến: </string>
    <string name="tv_thugon">Thu gọn</string>
    <string name="tv_giu_3s">Ấn giữ 3s để chọn chuyển đồng thời</string>
    <string name="tv_nhan_chon">Nhấn vào để chọn đơn vị liên thông nội bộ</string>
    <string name="tv_nhan_chon_nguoinhan"> Nhấn vào để chọn người nhận</string>
    <string name="tv_chon_lienthong">Nhấn vào để chọn đơn vị liên thông nội bộ</string>
    <string name="tv_vuilong_doi">Vui lòng đợi trong giây lát...</string>
    <string name="NOT_PERSON_PROCESS">Chưa chọn người nhận xử lý chính</string>
    <string name="NOT_PERSON">Chưa chọn đơn vị/cá nhân nhận văn bản</string>

    <string name="str_huy_bo">Hủy bỏ</string>
    <string name="str_dong_y">Đồng ý</string>
    <string name="tv_nhap_noi_dung_ket_thuc">Nhập nội dung kết thúc văn bản</string>


    <string name="tv_chon_theonhom">Chọn theo nhóm đơn vị</string>
    <string name="tv_chon_theonhom_canhan">Chọn theo nhóm cá nhân</string>

    <string name="POSITION_ACCOUNT">Chức vụ</string>
    <string name="UNIT_ACCOUNT">Đơn vị</string>
    <string name="SEARCH_LABEL_BTN">Tìm kiếm</string>

    <string name="str_chuachon_xlc">Giao việc cần phải chọn vào cá nhân/đơn vị nhận có vai trò XLC</string>
    <string name="text_sucssess_create_work_new">Tạo công việc mới thành công</string>
    <string name="text_title_create_work_new">Tạo công việc mới</string>
    <string name="check_create_work_new">Cần nhập hạn xử lý công việc trước khi chọn đơn vị/cá nhân.</string>
    <string name="tv_chon">Chọn</string>
    <string name="SELECT_JOB_POSSITION">---Chọn chức danh---</string>
</resources>