<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_200"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

<!--        <include-->
<!--            android:id="@+id/toolbarSaveDocument" />-->
        <include
            android:id="@+id/toolbarSaveDocument"
            layout="@layout/toolbar_savedocument" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/layoutAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nodata"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tv_khong_dulieu"
                android:textColor="@color/md_black"
                android:textSize="@dimen/_14sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/layout_document"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:background="#fff"
                android:orientation="vertical"></LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layoutAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/border_btn_search"
            android:text="@string/tv_luu"
            android:textAllCaps="false"
            android:textColor="@color/md_white"
            android:textSize="@dimen/_12sp" />

        <Button
            android:id="@+id/btn_save_finish"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/border_btn_search"
            android:text="@string/btn_luu_va_ketthuc"
            android:textAllCaps="false"
            android:textColor="@color/md_white"
            android:textSize="@dimen/_12sp" />

        <Button
            android:id="@+id/btnComment"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="@drawable/border_btn_yellow"
            android:text="@string/tv_cho_ykien"
            android:textAllCaps="false"
            android:textColor="@color/md_white"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="@drawable/border_btn_green"
            android:text="@string/str_button_quaylai"
            android:textAllCaps="false"
            android:textColor="@color/md_white"
            android:textSize="@dimen/_12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>