<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_border_10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/viewData"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtHeaderDialog"
            android:textColor="@color/md_grey_800"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/_8dp"
            android:textSize="@dimen/_16sp"

            android:text="@string/tv_nhap_noi_dung_ket_thuc"/>

        <EditText
            android:id="@+id/txtFeedBack"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_5dp"

            android:maxLines="5"
            android:minLines="5"
            android:textColor="@color/md_grey_800"
            android:textColorHint="@color/md_grey_500"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignBottom="@+id/viewData"
        android:background="@color/md_grey_200" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@+id/viewData"
        android:weightSum="10">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:paddingBottom="@dimen/_5dp"
            android:background="@color/md_white"
            android:id="@+id/btnCancel"
            android:textSize="14sp"
            android:textAllCaps="false"

            android:stateListAnimator="@null"
            android:layout_marginLeft="@dimen/_8dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/str_huy_bo"/>
        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="@dimen/_30dp"
            android:background="@color/md_white"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:id="@+id/btnYes"
            android:paddingBottom="@dimen/_5dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:background="@color/md_white"
            android:stateListAnimator="@null"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="@dimen/_8dp"
            android:text="@string/str_dong_y"/>
    </LinearLayout>

</RelativeLayout>