<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_process"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_white"
            android:orientation="vertical"
            android:visibility="visible">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1px"
                android:layout_marginStart="@dimen/_4dp"
                android:layout_marginEnd="@dimen/_4dp"
                android:background="@color/md_grey_300" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_4dp"
                android:layout_marginTop="@dimen/_4dp"
                android:layout_marginEnd="@dimen/_4dp"
                android:background="@drawable/background_border_2dp_grey_radius"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:padding="@dimen/_5dp">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:paddingLeft="@dimen/_5dp"
                        android:textColor="@color/md_grey_800"
                        android:textStyle="bold"
                        tools:text="@string/tv_ho_ten_dv" />

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:paddingLeft="@dimen/_5dp"
                        android:textColor="@color/md_grey_800"
                        tools:text="(Username)" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"

                    android:gravity="right"
                    android:paddingRight="@dimen/_5dp"
                    android:textColor="@color/md_grey_800"
                    tools:text="12/06/2018 12:06" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_noidung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5dp"

                    android:paddingLeft="@dimen/_5dp"
                    android:textColor="@color/colorPrimary" />

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:background="@color/md_grey_100" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_xlc_lb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:text="@string/tv_xuly_chinh"
                        android:textColor="@color/md_grey_600" />

                    <TextView
                        android:id="@+id/txtXLC"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.8"

                        android:textColor="@color/md_grey_800"
                        android:textStyle="bold"
                        tools:text="Xử lý chính" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_ph_lb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tv_phoihop"
                        android:textColor="@color/md_grey_600" />

                    <TextView
                        android:id="@+id/txtPH"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.8"

                        android:textColor="@color/md_grey_800"
                        android:textStyle="bold"
                        tools:text="Xử lý chính" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_xem_lb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"


                        android:text="@string/tv_xem_db"
                        android:textColor="@color/md_grey_600" />

                    <TextView
                        android:id="@+id/txtXem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.8"

                        android:textColor="@color/md_grey_800"
                        android:textStyle="bold"
                        tools:text="Xử lý chính" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_xyk_lb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tv_xin_y_kien"
                        android:textColor="@color/md_grey_600" />

                    <TextView
                        android:id="@+id/txtXYK"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.8"
                        android:textColor="@color/md_grey_800"
                        android:textStyle="bold"
                        tools:text="Xử lý chính" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>